refatorando codigo e atualizando a documentação
