# src/modules/cars/entities/Specification.ts
@@ -1,16 +1,25 @@
+import { Column, CreateDateColumn, Entity, PrimaryColumn } from "typeorm";
 import { v4 as uuid } from "uuid";
 
+@Entity("specifications")
 class Specification {
-  id?: string;
-  name: string;
-  description: string;
-  created_at: Date;
+    @PrimaryColumn()
+    id?: string;
 
-  constructor() {
-    if (!this.id) {
-      this.id = uuid();
+    @Column()
+    name: string;
+
+    @Column()
+    description: string;
+
+    @CreateDateColumn()
+    created_at: Date;
+
+    constructor() {
+        if (!this.id) {
+            this.id = uuid();
+        }
     }
-  }
 }
 
 export { Specification };
