# src/routes/categories.routes.ts
@@ -1,25 +1,27 @@
 import { Router } from "express";
 import multer from "multer";
 
-import createCategoryControllers from "../modules/cars/useCases/createCategory";
-import { importCategoryController } from "../modules/cars/useCases/importCategory";
-import { listCategoriesController } from "../modules/cars/useCases/listCategories";
+import { CreateCategoryController } from "../modules/cars/useCases/createCategory/CreateCategoryController";
+import { ImportCategoryController } from "../modules/cars/useCases/importCategory/ImportCategoryController";
+import { ListCategoriesController } from "../modules/cars/useCases/listCategories/ListCategoriesController";
 
 const CategoriesRoutes = Router();
 const upload = multer({
-  dest: "./tmp",
+    dest: "./tmp",
 });
 
-CategoriesRoutes.post("/", (request, response) => {
-  return createCategoryControllers().handle(request, response);
-});
+const createCategoryController = new CreateCategoryController();
+const importCategoryController = new ImportCategoryController();
+const listCategoriesController = new ListCategoriesController();
 
-CategoriesRoutes.get("/", (request, response) => {
-  return listCategoriesController.handle(request, response);
-});
+CategoriesRoutes.post("/", createCategoryController.handle);
 
-CategoriesRoutes.post("/import", upload.single("file"), (request, response) => {
-  return importCategoryController.handle(request, response);
-});
+CategoriesRoutes.get("/", listCategoriesController.handle);
+
+CategoriesRoutes.post(
+    "/import",
+    upload.single("file"),
+    importCategoryController.handle
+);
 
 export { CategoriesRoutes };
