# src/swagger.json
@@ -1,37 +1,26 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "RentalX Documentation",
-        "description": "This is an API Rent",
+        "title": "Rentx Documentation",
+        "description": "This is an API Rentx",
         "version": "1.0.0",
         "contact": {
             "email": "joaojunior346@gmail.com"
         }
     },
-
     "paths": {
         "/categories": {
             "post": {
-                "tags": ["Category"],
+                "tags": [
+                    "Category"
+                ],
                 "summary": "Create a category",
                 "description": "Create a new category",
                 "requestBody": {
                     "content": {
-                        "application/json":{
+                        "application/json": {
                             "schema": {
-                                "type": "object",
-                                "properties": {
-                                    "name": {
-                                        "type": "string"
-                                    },
-                                    "description":{
-                                        "type": "string"
-                                    }
-                                },
-                                "example": {
-                                    "name": "category name sample",
-                                    "description": "category description sample"
-                                }
+                                "$ref": "#/definitions/Categories"
                             }
                         }
                     }
@@ -45,34 +34,111 @@
                     }
                 }
             },
-            "get":{
-                "tags": ["Category"],
+            "get": {
+                "tags": [
+                    "Category"
+                ],
                 "summary": "List all categories",
-                "description":"List all categories",
+                "description": "List all categories",
                 "responses": {
                     "200": {
-                        "description": "Success",
-                        "content":{
-                            "application/json": {
-                                "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "type": "object",
-                                        "properties": {
-                                            "name": {
-                                                "type": "string"
-                                            },
-                                            "description": {
-                                                "type": "string"
-                                            }
-                                        }
-                                    }
-                                }
-                            }
-                        }
+                        "description": "Success"
                     }
                 }
             }
+        },
+        "/categories/import": {
+            "post": {
+                "tags": ["Category"],
+                "summary": "Upload a new category",
+                "description": "Upload a new category",
+                "requestBody":{
+                    "content":{
+                        "multipart/form-data":{
+                            "schema":{
+                                "$ref": "#/definitions/CategoriesImport"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201":{
+                        "description": "Created"
+                    }
+                }
+            }
+        },
+        "/specifications": {
+            "post": {
+                "tags": [
+                    "Specifications"
+                ],
+                "summary": "Create a specifications",
+                "description": "Create a new specifications",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/definitions/Specifications"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201":{
+                        "description": "Created"
+                    },
+                    "500":{
+                        "description":"Specification already exists"
+                    }
+                }
+
+            }
+        }
+    },
+    "definitions": {
+        "Specifications": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "description":{
+                    "type": "string"
+                }
+
+            },
+            "example": {
+                "name": "Cambio automatico",
+                "description": "Carro com cambio automatico"
+            }
+        },
+        "Categories": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "description":{
+                    "type": "string"
+                }
+
+            },
+            "example": {
+                "name": "SUV",
+                "description": "Categoria para carro SUV"
+            }
+        },
+        "CategoriesImport": {
+            "type": "object",
+            "properties": {
+                "file": {
+                    "type": "string",
+                    "format":"binary"
+                } 
+               
+            }
         }
     }
+    
 }
